--- a/src/sdg/components/Fieldset/_fieldset.scss
+++ b/src/sdg/components/Fieldset/_fieldset.scss
@@ -1,4 +1,4 @@
-@use "../../scss/qc-sdg-lib" as *;
+@use "qc-sdg-lib" as *;
 
 .qc-fieldset {
   display: flex;
@@ -42,6 +42,29 @@ $invalid-border-width: 2px;
   margin-left: calc(-1 * #{$invalid-offset} - $invalid-border-width);
 }
 
+%tiled-gap {
+  gap: token-value(spacer, xs);
+}
 
+.qc-field-elements-tiled-flex-row {
+  @extend %tiled-gap;
+  display: inline-flex;
+  flex-wrap: wrap;
 
+  .qc-check-row-parent {
+    flex-grow: 0;
+  }
+}
+
+.qc-field-elements-tiled {
+  @extend %tiled-gap;
+  display: inline-grid;
+  grid-template-columns: repeat(var(--column-count), 1fr);
+}
+
+.qc-field-elements-flex {
+  display: flex;
+  gap: token-value(spacer, sm);
+  flex-direction: column;
+}
 
