--- a/src/sdg/components/RadioButton/_radioButton.scss
+++ b/src/sdg/components/RadioButton/_radioButton.scss
@@ -2,8 +2,9 @@
 @use "../CheckFieldGroup/checkRow" as *;
 
 input[type=radio] {
-  .qc-check-row & {
-    border-radius: 100%;
+  border-radius: 100%;
+  .qc-check-row &,
+  .qc-selection-button & {
 
     &::before {
       width: rem(14);
@@ -17,9 +18,12 @@ input[type=radio] {
     }
   }
 
-  .qc-compact &::before {
-    width: rem(10);
-    height: rem(10);
+  .qc-compact,
+  .qc-selection-button & {
+    &::before {
+      width: rem(10);
+      height: rem(10);
+    }
   }
 }
 
