--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2312,6 +2312,7 @@ input[type=checkbox]:checked.qc-compact::after {
   display: inline-flex;
 }
 .qc-switch:has(input:disabled) {
+  color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
 .qc-switch input[type=checkbox] {
@@ -2336,7 +2337,7 @@ input[type=checkbox]:checked.qc-compact::after {
   cursor: not-allowed;
 }
 .qc-switch input[type=checkbox]:disabled ~ .qc-switch-slider::before {
-  border-color: transparent;
+  outline: transparent;
 }
 .qc-switch.qc-switch-justify {
   display: flex;
@@ -2362,12 +2363,12 @@ input[type=checkbox]:checked.qc-compact::after {
 .qc-switch-slider::before {
   position: absolute;
   content: "";
-  height: 2.8rem;
-  width: 2.8rem;
-  left: 0.1rem;
-  bottom: 0.1rem;
+  height: 2.6rem;
+  width: 2.6rem;
+  left: 0.2rem;
+  bottom: 0.2rem;
   background-color: var(--qc-color-white);
-  border: 0.1rem solid rgba(var(--qc-color-blue-dark-rgb), 50%);
+  outline: 0.1rem solid rgba(var(--qc-color-blue-dark-rgb), 50%);
   border-radius: 50%;
   transition: all 0.3s ease-out;
 }
