--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2374,6 +2374,7 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 
 .qc-dropdown-list {
+  position: relative;
   border: 0.1rem solid var(--qc-color-grey-medium);
   width: var(--dropdown-width);
   min-height: 4rem;
@@ -2411,6 +2412,8 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 
 .qc-dropdown-button-icon {
+  display: flex;
+  align-items: center;
   rotate: 180deg;
   transition: transform 0.3s ease-out;
 }
@@ -2420,9 +2423,22 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 
 .qc-dropdown-list-items {
+  position: absolute;
   max-height: 33rem;
+  width: calc(100% + 2px);
+  left: -0.1rem;
+  right: -0.1rem;
+  top: 100%;
+  z-index: 1;
   overflow-y: auto;
+  background-color: var(--qc-color-background);
+  border-left: 0.1rem solid var(--qc-color-grey-medium);
+  border-right: 0.1rem solid var(--qc-color-grey-medium);
+  border-bottom: 0.1rem solid var(--qc-color-grey-medium);
   scrollbar-color: var(--qc-color-blue-regular) var(--qc-color-background);
+}
+.qc-dropdown-list-items::-webkit-scrollbar-thumb {
+  background-color: var(--qc-color-blue-regular);
 }
 .qc-dropdown-list-items .qc-check-row {
   height: 4rem;
