Ajout du composant TextField avec tous les changements d'architecture nécessaires fait dans champ-texte initialement

--- a/src/sdg/scss/lib/_mixins.scss
+++ b/src/sdg/scss/lib/_mixins.scss
@@ -131,7 +131,10 @@
     inset: 0;
     z-index: -5
   }
-  &:has(input:focus), &:focus {
+  &:has(input:focus),
+  &:focus,
+  &:has(textarea:focus),
+ {
     outline: 2px solid token-value(color formfield focus outline);
     &::before {
       border: 2px solid token-value(color formfield focus border);
