--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -24,6 +24,7 @@
 @use "../components/SearchInput/searchInput";
 @use "../components/RadioButton/radioButton";
 @use "../components/Checkbox/checkbox";
+@use "../components/TextField/textField";
 @use "../components/FormError/formError";
 @use "../components/ToggleSwitch/toggleSwitch";
 @use "../components/Label/label";
